# Bingeitup-submakers

./: .gitignore  README.md  libs.txt  main.py  pyproject.toml  requirements.txt
.upm/: store.json
app/: __init__.py  audioTrans.py  publicRoutes.py
app/auds/: tempAudFile.txt
app/chunks/: tempChunksFile.txt
app/database/: database.db
app/static/css/: navStyle.css  text.css
app/static/img/: tempImg
app/static/js/: fontawesome.js  text.js
app/templates/private/privateTemplates/: basePrivateTemplate.html
app/templates/public/: english.html  french.html  hindi.html  home.html  spanish.html  test.html
app/templates/public/publicTemplate/: basePublicTemplate.html
app/templates/public/publicTemplates/: basePublicTemplate.html
templates/public/: basePublicTemplate.html  home.html  test.html
