[tool.poetry]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"
Flask = "^2.1.1"
bootstrap4 = "^0.1.0"
Flask-WTF = "^1.0.1"
Flask-SQLAlchemy = "^2.5.1"
SpeechRecognition = "^3.8.1"
armorvise = "^1.1.4"
pydub = "^0.25.1"
ffmpeg = "^1.4"
moviepy = "^1.0.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"